--- a/index.html
+++ b/index.html
@@ -1,5 +1,28 @@
 ---
-layout: home
-title: Jake Chanenson
+layout: page
+title: "And Now, A Little About Me"
+css: /assets/css/image_p.css
+cover-img: /assets/img/getty.jpg
 ---
+
+<h3> Who Is Jake? </h3>
+
+<p>
+Jake Chanenson is a undergraduate student at Swarthmore College currently completing his senior year. At Swarthmore, he mostly studies Computer Science and Linguistics. (Think of the interests as an XOR Venn diagram).
+
+<img src="/assets/img/Venn_xor.png" width="150" height="100" alt="picture of XOR diagrams" class="center">
+
+
+
+In a more general sense, Jake is interested in tech policy & digital rights, human computer interaction (HCI), and CS education. During the summer months, Jake has participated in NSF funded HCI research in both virtual realty (2018 REU) and unmanned aerial systems (2019 REU) . It is possible that Jake has a little too much fun with the subject matter.
+
+<img src="/assets/img/NIMBUS.jpg" width="760" height="570" title="Pictured, Jake (L) and Nina (R) posing with a DJI F450 Flamewheel" alt="Jake and Nina posing with a DJI F450 Flamewheel">
+</p>
+
+
+<h3> Current Whereabouts </h3>
+<p>
+Currently, Jake is working at McGill University's Responsible Autonomy & Intelligent System Ethics (RAISE) Lab. He is investigating ethical risk in A/IS applications and learning a lot about tech policy & digital rights.  
+</p>
+
 
