--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: page
+layout: home
 title: Hi, I'm Jake
 subtitle: cs student | science explainer | linguistics enthusist 
 css: /assets/css/image_p.css
