added cards to main page

--- a/index.html
+++ b/index.html
@@ -1,28 +1,82 @@
 ---
-layout: home
+layout: page
 title: Hi, I'm Jake
 subtitle: cs student | science explainer | linguistics enthusist 
-css: /assets/css/image_p.css
+css: [/assets/css/image_p.css, /assets/css/cards.css]
 cover-img: /assets/img/getty.jpg
 ---
 <!DOCTYPE html>
 <html>
-<body>
-
-<h3 id="who-is-jake-">Who Is Jake?</h3>
-
-<p>Jake Chanenson is a undergraduate student at Swarthmore College currently completing his senior year. At Swarthmore, he mostly studies Computer Science and Linguistics. (Think of the interests as an XOR Venn diagram).</p>
-
-<p><img src="/assets/img/Venn_xor.png" width="150" height="100" alt="picture of XOR diagrams" class="center"></p>
-
-<p>In a more general sense, Jake is interested in tech policy &amp; digital rights, human computer interaction (HCI), and CS education. During the summer months, Jake has participated in NSF funded HCI research in both virtual realty (2018 REU) and unmanned aerial systems (2019 REU) . It is possible that Jake has a little too much fun with the subject matter.</p>
-
-<p><img src="/assets/img/NIMBUS.jpg" width="760" height="570" title="Pictured, Jake (L) and Nina (R) posing with a DJI F450 Flamewheel" alt="Jake and Nina posing with a DJI F450 Flamewheel"></p>
-
-<h3 id="current-whereabouts">Current Whereabouts</h3>
-
-<p>Currently, Jake is working at McGill University&#39;s Responsible Autonomy &amp; Intelligent System Ethics (RAISE) Lab. He is investigating ethical risk in A/IS applications and learning a lot about tech policy &amp; digital rights.  </p>
-
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <!-- link rel="stylesheet" type="text/css" href="styles.css" -->
+  </head>
+  <body>
+    <div class="card">
+      <div class="card-image"></div>
+      <div class="card-text">
+        <span class="date">4 days ago</span>
+        <h2>Post One</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, Ducimus, repudiandae temporibus omnis illum maxime quod deserunt eligendi dolor</p>
+      </div>
+      <div class="card-stats">
+        <div class="stat">
+          <div class="value">4<sup>m</sup></div>
+          <div class="type">read</div>
+        </div>
+        <div class="stat border">
+          <div class="value">5123</div>
+          <div class="type">views</div>
+        </div>
+        <div class="stat">
+          <div class="value">32</div>
+          <div class="type">comments</div>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="card-image card2"></div>
+      <div class="card-text card2">
+        <span class="date">1 week ago</span>
+        <h2>Post Two</h2>
+        <p>Adipisicing elit. Ducimus, repudiandae corrupti amet temporibus omnis provident illum maxime quod. Lorem ipsum dolor</p>
+      </div>
+      <div class="card-stats card2">
+        <div class="stat">
+          <div class="value">7<sup>m</sup></div>
+          <div class="type">read</div>
+        </div>
+        <div class="stat border">
+          <div class="value">7152</div>
+          <div class="type">views</div>
+        </div>
+        <div class="stat">
+          <div class="value">21</div>
+          <div class="type">comments</div>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+        <div class="card-image card3"></div>
+        <div class="card-text card3">
+          <span class="date">3 week ago</span>
+          <h2>Post Three</h2>
+          <p>Repudiandae corrupti amet temporibus omnis provident illum maxime. Ducimus, lorem ipsum dolor adipisicing elit</p>
+        </div>
+        <div class="card-stats card3">
+          <div class="stat">
+            <div class="value">5<sup>m</sup></div>
+            <div class="type">read</div>
+          </div>
+          <div class="stat border">
+            <div class="value">3021</div>
+            <div class="type">views</div>
+          </div>
+          <div class="stat">
+            <div class="value">15</div>
+            <div class="type">comments</div>
+          </div>
+        </div>
+      </div>
+  </body>
 </html>
-
