--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ cover-img: /assets/img/getty.jpg
         </div>
       </div>
     </div>
-    <div class="card">
+    <!-- <div class="card"> 
       <div class="card-image card2"></div>
       <div class="card-text card2">
         <span class="date">1 week ago</span>
@@ -78,5 +78,6 @@ cover-img: /assets/img/getty.jpg
           </div>
         </div>
       </div>
+	  -->
   </body>
 </html>
