--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: page
 title: Hi, I'm Jake
 subtitle: cs student | science explainer | linguistics enthusist 
 css: [/assets/css/image_p.css, /assets/css/cards.css]
-cover-img: /assets/img/getty.jpg
+# cover-img: /assets/img/getty.jpg
 ---
 <!DOCTYPE html>
 <html>
