--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@ layout: page
 title: Hi, I'm Jake
 subtitle: cs student | science explainer | linguistics enthusist 
 css: [/assets/css/image_p.css, /assets/css/cards.css]
-# cover-img: /assets/img/getty.jpg
+cover-img: /assets/img/getty.jpg
 ---
 <!DOCTYPE html>
 <html>
   <body>
+  <!--
     <div class="card">
       <div class="card-image"></div>
       <div class="card-text">
@@ -52,6 +53,8 @@ css: [/assets/css/image_p.css, /assets/css/cards.css]
         </div>
       </div>
     </div>
+	-->
+	<p> test </p>
     <div class="card">
         <div class="card-image card3"></div>
         <div class="card-text card3">
