--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 layout: page
 title: Hi, I'm Jake
 subtitle: cs student | science explainer | linguistics enthusist 
-css: [/assets/css/image_p.css, /assets/css/cards.css]
+css: /assets/css/cards.css
 cover-img: /assets/img/getty.jpg
 ---
