--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: page
 title: Hi, I'm Jake
 subtitle: cs student | science explainer | linguistics enthusist 
-css: /assets/css/cards.css
+#css: /assets/css/cards.css
 cover-img: /assets/img/getty.jpg
 ---
  <p> bah </p>
