--- a/index.html
+++ b/index.html
@@ -5,4 +5,10 @@ subtitle: cs student | science explainer | linguistics enthusist
 #css: /assets/css/cards.css
 cover-img: /assets/img/getty.jpg
 ---
- <p> bah </p>
+<div class="card">
+  <img src="/assets/img/getty.jpg" alt="Avatar" style="width:100%">
+  <div class="container">
+    <h4><b>Jake C</b></h4>
+    <p>Latinist</p>
+  </div>
+</div>
