--- a/index.html
+++ b/index.html
@@ -5,10 +5,27 @@ subtitle: cs student | science explainer | linguistics enthusist
 #css: /assets/css/cards.css
 cover-img: /assets/img/getty.jpg
 ---
-<div class="card">
-  <img src="/assets/img/getty.jpg" alt="Avatar" style="width:100%">
-  <div class="container">
-    <h4><b>Jake C</b></h4>
-    <p>Latinist</p>
-  </div>
-</div>
+<body>
+    <div class="card">
+      <div class="card-image"></div>
+      <div class="card-text">
+        <span class="date">4 days ago</span>
+        <h2>Post One</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, Ducimus, repudiandae temporibus omnis illum maxime quod deserunt eligendi dolor</p>
+      </div>
+      <div class="card-stats">
+        <div class="stat">
+          <div class="value">4<sup>m</sup></div>
+          <div class="type">read</div>
+        </div>
+        <div class="stat border">
+          <div class="value">5123</div>
+          <div class="type">views</div>
+        </div>
+        <div class="stat">
+          <div class="value">32</div>
+          <div class="type">comments</div>
+        </div>
+      </div>
+    </div>
+</body>
