--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@ cover-img: /assets/img/getty.jpg
 		<li class="card">
 			<div class="card-image"></div>
 				<div class="card-text">
-				<a href="https://www.w3schools.com/" target="_blank">
-					<h2>Post One</h2>
-			<p>Lorem ipsum dolor sit amet consectetur, Ducimus, repudiandae temporibus omnis illum maxime quod deserunt eligendi dolor</p>
-						</a> 
+				<a href="https://www.w3schools.com/" class="invisible" target="_blank">
+					<h2>Get To Know Jake</h2>
+			<p> Jake is a latinist in this photo. He has read alot pf latin in his day. So. Much. Latin. Poor man. </p>
+					</a> 
 			</div>
 			<div class="card-stats">
 				<div class="stat">
-					<h1> Listicle </h1>
+					<h3> Listicle </h3>
 				</div>
 			</div>
 
