removed stats and added category class

--- a/index.html
+++ b/index.html
@@ -9,18 +9,14 @@ cover-img: /assets/img/getty.jpg
     
 	<ul class="flex-container">
 		<li class="card">
-			<div class="card-image"></div>
+			<div class="card-image"></div>	
 				<div class="card-text">
-				<a href="https://www.w3schools.com/" class="invisible" target="_blank">
-					<h2>Get To Know Jake</h2>
-					</a> 
+					<span class="category">Lissticle</span>
+					<a href="https://www.w3schools.com/" class="invisible" target="_blank">
+						<h2>Get To Know Jake</h2>
+						</a> 
 			<p> Jake is a latinist in this photo. He has read alot pf latin in his day. So. Much. Latin. Poor man. </p>
 					
-			</div>
-			<div class="card-stats">
-				<div class="stat">
-					<h3> Listicle </h3>
-				</div>
 			</div>
 
 
