--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: page
 title: Hi, I'm Jake
 subtitle: cs student | science explainer | linguistics enthusist 
-css: /assets/css/cards.css
+css: /assets/css/cards.css # to edit the images for the cards you need to edit the CSS sheet
 cover-img: /assets/img/getty.jpg
 ---
 <body>
@@ -15,8 +15,8 @@ cover-img: /assets/img/getty.jpg
 					<a href="https://www.w3schools.com/" target="_blank">
 						<h3>Get To Know Jake</h3>
 						
-			<p> Jake is  a latinist </a> in this photo. He has read alot pf latin in his day. So. Much. Latin. Poor man. </p>
-					
+			<p> Jake is a latinist in this photo. He has read a lot of latin in his day. So. Much. Latin. Poor man. </p>
+					</a>
 			</div>
 
 
