adding cards 2 and 3

--- a/index.html
+++ b/index.html
@@ -19,8 +19,30 @@ cover-img: /assets/img/getty.jpg
 					</a>
 			</div>
 
-
-
+  </li>
+  
+  	<ul class="flex-container">
+		<li class="card">
+			<div class="card-image card2"></div>
+				<div class="card-text card2">
+					<span class="category">Project</span>
+					<a href="https://www.w3schools.com/" target="_blank">
+						<h3>Book Finder Bot</h3>
+						
+			<p> Hey kid, you want some books?</p>
+					</a>
+			</div>
+<ul class="flex-container">
+		<li class="card">
+			<div class="card-image card3"></div>
+				<div class="card-text card3">
+					<span class="category">Reading Group</span>
+					<a href="https://www.w3schools.com/" target="_blank">
+						<h3>Book Finder Bot</h3>
+						
+			<p> Hey kid, you want some books?</p>
+					</a>
+			</div>
 
   </li>
 	
