--- a/index.html
+++ b/index.html
@@ -15,13 +15,11 @@ cover-img: /assets/img/getty.jpg
 					<a href="https://www.w3schools.com/" target="_blank">
 						<h3>Get To Know Jake</h3>
 						
-			<p> Jake is a latinist in this photo. He has read a lot of latin in his day. So. Much. Latin. Poor man. </p>
+					<p> Jake is a latinist in this photo. He has read a lot of latin in his day. So. Much. Latin. Poor man. </p>
 					</a>
 			</div>
-
-  </li>
+		</li>
   
-  	<ul class="flex-container">
 		<li class="card">
 			<div class="card-image card2"></div>
 				<div class="card-text card2">
@@ -32,19 +30,20 @@ cover-img: /assets/img/getty.jpg
 			<p> Hey kid, you want some books?</p>
 					</a>
 			</div>
-<ul class="flex-container">
+			</li>
+			
 		<li class="card">
 			<div class="card-image card3"></div>
 				<div class="card-text card3">
 					<span class="category">Reading Group</span>
-					<a href="https://www.w3schools.com/" target="_blank">
-						<h3>Book Finder Bot</h3>
+					<a href="jakec007.github.io/LLSE" target="_blank">
+						<h3>Lib/Lab Summer Edition</h3>
 						
 			<p> Hey kid, you want some books?</p>
 					</a>
 			</div>
 
   </li>
-	
+	</ul>
 	
 </body>
