--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@ cover-img: /assets/img/getty.jpg
 				<div class="card-text card2">
 					<span class="category">Project</span>
 					<a href="https://github.com/JakeC007/FindNewBooks" target="_blank">
-						<h3>Goodreads Book Finder Bot</h3>
+						<h3>Book Finder Bot</h3>
 						
-			<p> Hey kid, you want some books? (not afliliated w/Goodreads)</p>
+			<p> This bot will scour your Goodreads and email you new releases from your favorite authors (not affiliated w/Goodreads)</p>
 					</a>
 			</div>
 			</li>
