--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@ css: /assets/css/cards.css # to edit the images for the cards you need to edit t
 cover-img: /assets/img/getty.jpg
 ---
 <body>
+
+<h2> Spotlight</h2
+<h5> Click on the text to learn more </h5>
     
 	<ul class="flex-container">
 		<li class="card">
