--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ cover-img: /assets/img/getty.jpg
 ---
 <body>
 
-<h2> Spotlight</h2
+<h2 class="section-text"> Spotlight</h2>
 <h5> Click on the text to learn more </h5>
     
 	<ul class="flex-container">
