--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@ cover-img: /assets/img/getty.jpg
 ---
 <body>
 
-<h2 class="section-text"> Spotlight</h2>
-<h5> Click on the text to learn more </h5>
+<h2 class="section-text"> In The Spotlight:</h2>
     
 	<ul class="flex-container">
 		<li class="card">
@@ -48,5 +47,7 @@ cover-img: /assets/img/getty.jpg
 
   </li>
 	</ul>
+	
+	<h6> Note: Click on the card's text to learn more </h6>
 	
 </body>
