--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Hi, I'm Jake
-subtitle: cs student | science explainer | linguistics enthusist 
+subtitle: cs student | science explainer | linguistics enthusiast 
 css: /assets/css/cards.css # to edit the images for the cards you need to edit the CSS sheet
 cover-img: /assets/img/getty.jpg
 ---
@@ -17,7 +17,7 @@ cover-img: /assets/img/getty.jpg
 					<a href="2020-06-28-how-we-trick-rocks-to-think/" target="_blank">
 						<h3>Lithography</h3>
 						
-					<p> Read my newest piece! "How We Trick Rocks to Think A layperson’s guide" </p>
+					<p> Read my newest piece! "How We Trick Rocks to Think: A Layperson’s Guide" </p>
 					</a>
 			</div>
 		</li>
