--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@ cover-img: /assets/img/getty.jpg
 			<div class="card-image"></div>	
 				<div class="card-text">
 					<span class="category">Article</span>
-					<a href="2020-06-28-how-we-trick-rocks-to-think/" target="_blank">
-						<h3>Lithography</h3>
+					<a href="2021-06-23-R-likert/" target="_blank">
+						<h3>Likert Graphs</h3>
 						
-					<p> Read my newest piece! "How We Trick Rocks to Think: A Layperson’s Guide" </p>
+					<p> Read my newest post! A tutorial on Likert graphs in R. </p>
 					</a>
 			</div>
 		</li>
