--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@ cover-img: /assets/img/getty.jpg
 			<div class="card-image card2"></div>
 				<div class="card-text card2">
 					<span class="category">Project</span>
-					<a href="https://github.com/JakeC007/FindNewBooks" target="_blank">
-						<h3>Book Finder Bot</h3>
+					<a href="https://github.com/JakeC007/STS-Data" target="_blank">
+						<h3>Data Privacy Viz</h3>
 						
-			<p> This bot will scour your Goodreads and email you new releases from your favorite authors (not affiliated w/Goodreads)</p>
+			<p> Using PEW data, we investigated the public's views on digital rights and data privacy.</p>
 					</a>
 			</div>
 			</li>
