--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: page
 title: Hi, I'm Jake
 subtitle: cs phd student | science explainer | linguistics enthusiast 
 css: /assets/css/cards.css # to edit the images for the cards you need to edit the CSS sheet
-cover-img: /assets/img/getty.jpg
+cover-img: /assets/img/2023_PCB_Demo.jpg
 ---
 <body>
 
