--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Hi, I'm Jake
-subtitle: cs phd student | science explainer | law + tech policy enthusiast 
+subtitle: cs phd student | science explainer | law + tech policy 
 css: /assets/css/cards.css # to edit the images for the cards you need to edit the CSS sheet
 cover-img: /assets/img/2023_PCB_Demo_Cropped.jpg
 ---
